# YAMLicious

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  YAMLicious.sln  package-lock.json  package.json  pyproject.toml  setup.cmd  tsconfig.json
.config/: dotnet-tools.json
src/YAMLicious/: AST.fs  Decode.fs  Encode.fs  Escapes.fs  FlowToBlock.fs  Library.fs  PatternMatcher.fs  Persil.fs  Preprocessing.fs  Reader.fs  Regex.fs  RegexActivePatterns.fs  StringBuffer.fs  Tests.YamlMatch.fs  Writer.fs  YAMLicious.fsproj  YAMLiciousTypes.fs
src/YAMLicious.CSharp/: Main.cs  YAMLicious.CSharp.csproj
src/YAMLicious.CSharp/Util/: Option.cs  TupleExtensions.cs
src/YAMLicious/Interop/: JsInterop.fs  PyInterop.fs
tests/YAMLicious/: Main.fs  Tests.CommentCleanUp.fs  Tests.EncodingCleanUp.fs  Tests.StringCleanUp.fs  Tests.YamlMatch.fs  Tests.YamlRead.fs  YAMLicious.Tests.fsproj
tests/YAMLicious.CSharp.Tests/: UnitTest1.cs  YAMLicious.CSharp.Tests.csproj
tests/YAMLicious.CSharp.Tests/Util/: CompletenesUtil.cs
tests/YAMLicious.JavaScript.Tests/: YAMLicious.js
tests/YAMLicious.JavaScript.Tests/YAMLicious/: Main.d.ts  Main.js  index.d.ts
tests/YAMLicious.Python.Tests/: test_YAMLicious.py
tests/YAMLicious.Tests/: Main.fs  Tests.AdvancedFeatures.fs  Tests.BlockScalars.fs  Tests.Directives.fs  Tests.EncoderDecoder.fs  Tests.Escapes.fs  Tests.FlowToBlock.fs  Tests.ReaderDocuments.fs  Tests.ScalarStyles.fs  Tests.StringCleanUp.fs  Tests.YamlGenericRead.fs  Tests.YamlMatch.fs  Tests.YamlRead.fs  Tests.YamlWrite.fs  Util.fs  YAMLicious.Tests.fsproj
(+1 files in other folders)
